// TechMarket — Orders Service DB (MySQL)
// DB-per-service: замовлення, довідники клієнтів/співробітників/регіонів

Table customers {
  id char(36) [primary key]
  first_name varchar(100)
  last_name varchar(100)
  email varchar(255) [unique]
  phone varchar(50)
  created_at datetime
  updated_at datetime
}

Table regions {
  id char(36) [primary key]
  name varchar(100)
  code varchar(10) [unique, note: 'Код регіону']
}

Table employees {
  id char(36) [primary key]
  first_name varchar(100)
  last_name varchar(100)
  email varchar(255) [unique]
  hired_at date
  is_manager boolean [note: 'Флаг керівника']
  region_id char(36) [ref: > regions.id, note: 'Регіон відповідальності']
}

Table orders {
  id char(36) [primary key]
  customer_id char(36) [ref: > customers.id]
  employee_id char(36) [ref: > employees.id]
  region_id char(36) [ref: > regions.id]
  order_date datetime
  status varchar(20) [note: 'new, paid, shipped, cancelled']
  total_amount decimal(10,2)
  created_at datetime
  updated_at datetime

  Indexes {
    (customer_id) [name: 'order_customer_idx']
    (employee_id) [name: 'order_employee_idx']
    (region_id) [name: 'order_region_idx']
    (order_date) [name: 'order_date_idx']
  }
}

Table order_items {
  id char(36) [primary key]
  order_id char(36) [ref: > orders.id]
  product_id char(36) [note: 'Ref: Catalog DB (products.id), без FK між БД']
  quantity integer
  unit_price decimal(10,2)
  discount decimal(10,2) [note: 'Знижка на позицію (грошима або часткою)']

  Indexes {
    (order_id) [name: 'oi_order_idx']
    (product_id) [name: 'oi_product_idx']
  }
}

